# LLVM-in-Rust

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/skills/: fix-issue.md  implement-phase.md  review-and-fix.md
.github/ISSUE_TEMPLATE/: miscompilation_evidence.yml
.github/workflows/: compatibility.yml  differential.yml  fuzz.yml  require-issue-reference.yml
docs/: bootstrap_compatibility_matrix.md  design.md  unwind_compatibility_matrix.md  user_manual.md  windows_debug_codeview.md
examples/tikv_jit/: Cargo.toml
examples/tikv_jit/src/: main.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: parser.rs
llvm/: Cargo.toml
llvm-analysis/: Cargo.toml
llvm-analysis/src/: cfg.rs  dominators.rs  lib.rs  loops.rs  use_def.rs
llvm-bitcode/: Cargo.toml
llvm-bitcode/src/: lib.rs  reader.rs  writer.rs
llvm-codegen/: Cargo.toml
llvm-codegen/src/: emit.rs  isel.rs  legalize.rs  lib.rs  regalloc.rs  schedule.rs
llvm-ir/: Cargo.toml
llvm-ir-parser/: Cargo.toml
llvm-ir-parser/src/: lexer.rs  lib.rs  parser.rs
llvm-ir-parser/tests/: parse_basic.rs
llvm-ir/src/: basic_block.rs  builder.rs  context.rs  function.rs  instruction.rs  lib.rs  module.rs  printer.rs  types.rs  value.rs
llvm-ir/tests/: roundtrip.rs
llvm-target-arm/: Cargo.toml
llvm-target-arm/src/: abi.rs  encode.rs  instructions.rs  lib.rs  lower.rs  regs.rs
llvm-target-x86/: Cargo.toml
llvm-target-x86/src/: abi.rs  encode.rs  instructions.rs  lib.rs  lower.rs  regs.rs
llvm-transforms/: Cargo.toml
llvm-transforms/src/: const_prop.rs  constant_fold.rs  dce.rs  inline_pass.rs  lib.rs  mem2reg.rs  pass.rs
llvm/src/: lib.rs
scripts/: compat_stage_a.sh  compat_stage_b.sh  csmith_test.sh  llvm_stress_fuzz.sh
skills/constant-folding/: SKILL.md
skills/constant-folding/agents/: openai.yaml
skills/constant-folding/references/: issue-140-plan.md
skills/constant-folding/scripts/: fold_audit.sh
skills/dwarf-debug/: SKILL.md
skills/dwarf-debug/agents/: openai.yaml
skills/dwarf-debug/references/: issue-92-plan.md
skills/integrated-assembler/: SKILL.md
skills/ipa-optimizer/: SKILL.md
skills/linker-compat/: SKILL.md
skills/mem2reg-verification/: SKILL.md
skills/riscv-backend/: SKILL.md
skills/rust-stable-compat/: SKILL.md
skills/simd-vectorization/: SKILL.md
skills/smoke-oracle-triage/: SKILL.md
skills/windows-debug-pdb/: SKILL.md
src/llvm/: Cargo.toml
src/llvm-analysis/: Cargo.toml
src/llvm-bench/: Cargo.toml
src/llvm-bench/benches/: pipeline.rs
src/llvm-bench/fixtures/: sample.ll
src/llvm-bench/src/: lib.rs
src/llvm-bitcode/: Cargo.toml
src/llvm-codegen/: Cargo.toml
src/llvm-codegen/src/: assembler.rs  emit.rs  isel.rs  lib.rs  regalloc.rs  regalloc_gc.rs
src/llvm-codegen/tests/: codeview_coff.rs  dwarf_line.rs  linker_compat.rs  unwind_verify.rs
src/llvm-ir-parser/: Cargo.toml
src/llvm-ir-parser/examples/: run_ir.rs
src/llvm-ir-parser/src/: lexer.rs  parser.rs
src/llvm-ir-parser/tests/: differential.rs  parse_basic.rs  smoke.rs
src/llvm-ir-parser/tests/fixtures/: 01_int_arith_flags.ll  02_udiv_urem.ll  03_sdiv_exact_srem.ll  04_fp_arith_double.ll  05_fp_arith_float.ll  06_fp_fastmath.ll  07_fcmp.ll  08_icmp_all_preds.ll  09_trunc_zext_sext.ll  10_fptrunc_fpext.ll  11_fp_int_casts.ll  12_ptr_casts.ll  13_addrspacecast.ll  14_alloca_align.ll  15_load_store_align.ll  15b_volatile_mem.ll  16_gep_inbounds.ll  17_gep_struct.ll  18_extractvalue.ll  19_insertvalue.ll  20_extractelement.ll  21_insertelement.ll  22_shufflevector.ll  23_unreachable.ll  24_switch_many.ll  25_switch_default_only.ll  26_phi_loop.ll  27_phi_multiple.ll  28_tail_calls.ll  29_indirect_call.ll  30_variadic_call.ll  31_array_type.ll  32_struct_anon.ll  33_vector_arith.ll  34_named_struct_nested.ll  35_const_undef.ll  36_const_zeroinitializer.ll  37_const_null.ll  38_const_float_hex.ll  39_private_linkage.ll  (+13 more)
src/llvm-target-arm/: Cargo.toml
src/llvm-target-riscv/: Cargo.toml
src/llvm-target-riscv/src/: abi.rs  encode.rs  instructions.rs  lib.rs  lower.rs  regs.rs
src/llvm-target-riscv/tests/: e2e_objdump.rs
src/llvm-target-x86/: Cargo.toml
src/llvm-transforms/: Cargo.toml
src/llvm-transforms/src/: const_prop.rs  constant_fold.rs  constant_fold_pass.rs  dce.rs  dead_arg_elim.rs  gvn.rs  inline_pass.rs  ipcp.rs  lib.rs  loop_unroll.rs  mem2reg.rs  pass.rs  pipeline.rs  value_rewrite.rs
src/llvm-transforms/tests/: mem2reg_property.rs
src/llvm/src/: lib.rs  lto.rs
tests/alive2/: README.md
(+101 files in other folders)
