[workspace]
resolver = "2"
members = [
    "src/llvm-ir",
    "src/llvm-ir-parser",
    "src/llvm-analysis",
    "src/llvm-transforms",
    "src/llvm-codegen",
    "src/llvm-target-x86",
    "src/llvm-target-arm",
    "src/llvm-bitcode",
    "src/llvm",
    "src/llvm-bench",
    "examples/tikv_jit",
]
