[package]
name = "llvm"
version = "0.1.0"
edition = "2021"

[dependencies]
llvm-ir = { path = "../llvm-ir" }
llvm-ir-parser = { path = "../llvm-ir-parser" }
llvm-analysis = { path = "../llvm-analysis" }
llvm-transforms = { path = "../llvm-transforms" }
llvm-codegen = { path = "../llvm-codegen" }
llvm-target-x86 = { path = "../llvm-target-x86" }
llvm-target-arm = { path = "../llvm-target-arm" }
llvm-bitcode = { path = "../llvm-bitcode" }
