[package]
name = "llvm-codegen"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
llvm-ir = { path = "../llvm-ir" }
llvm-analysis = { path = "../llvm-analysis" }

[dev-dependencies]
llvm-ir-parser = { path = "../llvm-ir-parser" }
llvm-transforms = { path = "../llvm-transforms" }
llvm-target-x86 = { path = "../llvm-target-x86" }
llvm-target-arm = { path = "../llvm-target-arm" }
