[package]
name = "llvm-transforms"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
llvm-ir = { path = "../llvm-ir" }
llvm-analysis = { path = "../llvm-analysis" }

[dev-dependencies]
proptest = "1"
llvm-ir-parser = { path = "../llvm-ir-parser" }
llvm-codegen = { path = "../llvm-codegen" }
llvm-target-x86 = { path = "../llvm-target-x86" }
